--- a/src/forms/AddUserForm.module.css
+++ b/src/forms/AddUserForm.module.css
@@ -2,11 +2,11 @@ form {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top: 40px;
+    margin-top: 10px;
 }
 
 form label {
-    margin-top: 8px;
+    margin-top: 20px;
 }
 
 form input {
@@ -15,6 +15,8 @@ form input {
     border-radius: 4px;
     border: none;
     padding: 8px;
+    width: 100%;
+    font-size: 18px;
 }
 
 form button {
@@ -88,4 +90,22 @@ button:after {
   left: 0;
   top: 0;
   border-radius: 10px;
+}
+
+.inputContainer {
+  position: relative;
+  width: 100%;
+}
+
+.smileyLogo{
+  position: absolute;
+  top: 14px;
+  right: 0;
+  cursor: pointer;
+}
+
+.emojiContainer{
+  position: absolute;
+  z-index: 1;
+  right: 0;
 }
